cmake_minimum_required(VERSION 2.8...10.0.0)
project(fast_align)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O3 -g")
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

find_package(SparseHash)
if(SPARSEHASH_FOUND)
  add_definitions(-DHAVE_SPARSEHASH)
  include_directories(${SPARSEHASH_INCLUDE_DIR})
endif(SPARSEHASH_FOUND)

find_package(OpenMP QUIET)
if (OPENMP_FOUND)
  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif(OPENMP_FOUND)

add_library(fastalign src/fast_align.cc src/ttables.cc src/atools.cc)
add_executable(fast_align src/fast_align_main.cc)
target_link_libraries(fast_align fastalign)
add_executable(atools src/atools_main.cc src/alignment_io.cc)
target_link_libraries(atools fastalign)
configure_file(src/force_align.py force_align.py COPYONLY)
